2005-08-26  Bruno Haible  <bruno@clisp.org>

	* plural-table.c (plural_table): Add an entry about Romanian.
	Explanations by Eddy Petrişor <eddy.petrisor@gmail.com>.

2005-08-23  Bruno Haible  <bruno@clisp.org>

	* write-mo.h (byteswap): New variable.
	* write-mo.c: Include byteswap.h.
	(byteswap): New variable.
	(BSWAP32): New macro.
	(write_table): If requested, byteswap all 32-bit values before writing
	them out.
	* msgfmt.c (long_options): Add --endianness.
	(main): Accept --endianness argument and set byteswap.

2005-08-08  Bruno Haible  <bruno@clisp.org>

	* msginit.c (catalogname_for_locale): Add support for Old English,
	Hyam, Jju, Tyap, Maithili, Nahuatl, Low Saxon, Northern Sotho, Páez,
	Tetum, Zapotec.
	(englishname_of_language): Add support for Old English, Hyam, Jju,
	Tyap, Kagoma, Maithili, Mayan, Nahuatl, Low Saxon, Northern Sotho,
	Páez, Tetum, Zapotec.

2005-05-21  Bruno Haible  <bruno@clisp.org>

	New undocumented option, used by glocale PO files.
	* msgfmt.c (include_fuzzies): Renamed from include_all.
	(include_untranslated): New variable.
	(long_options): Add --use-untranslated.
	(main): Handle --use-untranslated.
	(msgfmt_frob_new_message): Test include_untranslated.
	(msgfmt_comment_special): Update.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	* user-email.sh.in (datarootdir): New variable.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	Fix compilation error on systems without iconv().
	* xgettext.c (convert_string): Remove fallback macro definition.
	(from_current_source_encoding) [!HAVE_ICONV]: Just abort here.

2005-07-17  Bruno Haible  <bruno@clisp.org>

	* po-lex.c (mb_width): Remove gcc warnings on platform with unsigned
	'char' type (e.g. Linux/PowerPC).
	Reported by Jeff Rizzo <riz@netbsd.org>.

2005-07-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (msgmerge_SOURCES, xgettext_SOURCES, msgattrib_SOURCES,
	msgcat_SOURCES, msgcomm_SOURCES, msgconv_SOURCES, msgen_SOURCES,